<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="network_connection_failure">통신 실패</string>
    <string name="retry">재시도</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="something_wrong">알 수 없는 문제가 발생했습니다.</string>
</resources>