<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="discount_rate">%d%%</string>
    <string name="product_price">%d원</string>
</resources>